test/Python/src/federated/failing/DistributedLoopedPhysicalActionDecentralized.lf
/**
 * Test a sender-receiver network system that
 * relies on microsteps being taken into account.
 *  
 * @author Soroush Bateni
 */

// reason for failing: get_current_tag() is not supported in python target

target C {
    timeout: 1 sec,
    coordination: decentralized
};

import Sender, Receiver from "DistributedLoopedPhysicalAction.lf"

federated reactor {
    sender = new Sender();
    receiver = new Receiver();
    
    sender.out -> receiver.in;
}
